--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,18 @@
 language: ruby
-
 rvm:
-  - 2.1.10
-  - 2.2.5
-  - 2.3.1
-
+  - 2.3.3
 sudo: false
-
-before_script:
-  - "sh -e /etc/init.d/xvfb start"
-  - "bundle exec rake test_app"
-
-script:
-  - "export DISPLAY=:99.0"
-  - "bundle exec rspec spec"
+cache: bundler
+only: master
+env:
+  matrix:
+    - SOLIDUS_BRANCH=v1.0 DB=mysql
+    - SOLIDUS_BRANCH=v1.0 DB=postgresql
+    - SOLIDUS_BRANCH=v1.1 DB=mysql
+    - SOLIDUS_BRANCH=v1.1 DB=postgresql
+    - SOLIDUS_BRANCH=v1.2 DB=mysql
+    - SOLIDUS_BRANCH=v1.2 DB=postgresql
+    - SOLIDUS_BRANCH=v1.3 DB=mysql
+    - SOLIDUS_BRANCH=v1.3 DB=postgresql
+    - SOLIDUS_BRANCH=v1.4 DB=mysql
+    - SOLIDUS_BRANCH=v1.4 DB=postgresql
