Downgrade bundler version on travis
it is a temporary fix to address the issue with Bundler 1.14
resolving dependencies: bundler/bundler#5359

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,3 +22,8 @@ env:
     - SOLIDUS_BRANCH=v2.1 DB=postgresql
     - SOLIDUS_BRANCH=master DB=mysql
     - SOLIDUS_BRANCH=master DB=postgresql
+before_install:
+  - rvm use @global
+  - gem uninstall bundler -x
+  - gem install bundler --version=1.13.7
+  - bundler --version
