--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,20 @@
+cache: bundler
+dist: trusty
 language: ruby
 rvm:
-  - 2.3.3
-sudo: false
-cache: bundler
-only: master
+  - 2.4.3
+addons:
+  chrome: stable
+  apt:
+    packages:
+      - chromium-chromedriver
+before_install:
+  - ln -s /usr/lib/chromium-browser/chromedriver ~/bin/chromedriver
+before_script:
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
+  - sleep 3 # give xvfb some time to start
+
 env:
   matrix:
     - SOLIDUS_BRANCH=v2.5 DB=postgres
