Update infrastructure through solidus_dev_support

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,16 @@
 *.gem
-*.swp
-.bundle
-.idea
+\#*
+*~
+.#*
 .DS_Store
-Gemfile.lock
-pkg/*
-spec/dummy
+.idea
+.project
+.sass-cache
 coverage
-.rvmrc
-.ruby-version
-.ruby-gemset
+Gemfile.lock
+tmp
+nbproject
+pkg
+*.swp
+spec/dummy
 spec/examples.txt
