--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,9 @@
 version: 2.1
 
 orbs:
+  # Required for feature specs.
+  browser-tools: circleci/browser-tools@1.1
+
   # Always take the latest version of the orb, this allows us to
   # run specs against Solidus supported versions only without the need
   # to change this configuration every time a Solidus version is released
@@ -8,13 +11,20 @@ orbs:
   solidusio_extensions: solidusio/extensions@volatile
 
 jobs:
+  run-specs-with-sqlite:
+    executor: solidusio_extensions/sqlite
+    steps:
+      - browser-tools/install-chrome
+      - solidusio_extensions/run-tests
   run-specs-with-postgres:
     executor: solidusio_extensions/postgres
     steps:
+      - browser-tools/install-chrome
       - solidusio_extensions/run-tests
   run-specs-with-mysql:
     executor: solidusio_extensions/mysql
     steps:
+      - browser-tools/install-chrome
       - solidusio_extensions/run-tests
   lint-code:
     executor: solidusio_extensions/sqlite-memory
@@ -24,6 +34,7 @@ jobs:
 workflows:
   "Run specs on supported Solidus versions":
     jobs:
+      - run-specs-with-sqlite
       - run-specs-with-postgres
       - run-specs-with-mysql
       - lint-code
@@ -37,5 +48,6 @@ workflows:
               only:
                 - master
     jobs:
+      - run-specs-with-sqlite
       - run-specs-with-postgres
       - run-specs-with-mysql
