--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,17 +12,23 @@ orbs:
 
 jobs:
   run-specs-with-sqlite:
-    executor: solidusio_extensions/sqlite
+    executor:
+      name: solidusio_extensions/sqlite
+      ruby_version: "3.0"
     steps:
       - browser-tools/install-chrome
       - solidusio_extensions/run-tests
   run-specs-with-postgres:
-    executor: solidusio_extensions/postgres
+    executor:
+      name: solidusio_extensions/postgres
+      ruby_version: "3.0"
     steps:
       - browser-tools/install-chrome
       - solidusio_extensions/run-tests
   run-specs-with-mysql:
-    executor: solidusio_extensions/mysql
+    executor:
+      name: solidusio_extensions/mysql
+      ruby_version: "3.0"
     steps:
       - browser-tools/install-chrome
       - solidusio_extensions/run-tests
