--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,8 +28,7 @@ jobs:
           - "7.2"
         ruby-version:
           - "3.1"
-          - "3.2"
-          - "3.3"
+          - "3.4"
         solidus-branch:
           - "v4.1"
           - "v4.2"
@@ -50,6 +49,8 @@ jobs:
             solidus-branch: "v4.2"
           - rails-version: "7.1"
             solidus-branch: "v4.1"
+          - ruby-version: "3.4"
+            rails-version: "7.0"
     env:
       TEST_RESULTS_PATH: coverage/coverage.xml
       CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
