--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,8 +51,6 @@ jobs:
             solidus-branch: "v4.1"
           - ruby-version: "3.4"
             rails-version: "7.0"
-    env:
-      TEST_RESULTS_PATH: coverage/coverage.xml
     steps:
       - uses: actions/checkout@v4
       - name: Run extension tests
@@ -67,4 +65,4 @@ jobs:
         continue-on-error: true
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ${{ env.TEST_RESULTS_PATH }}
+          files: ./coverage/coverage.xml
